--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -10,7 +10,7 @@
 
   &__image {
     position: relative;
-    background-image: url('/images/bg-intro-mobile.svg');
+    background-image: url('images/bg-intro-mobile.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -26,7 +26,7 @@
       order: 2;
       min-height: 41rem;
       background-image: none;
-      //background-image: url('/images/bg-intro-desktop.svg');
+      //background-image: url('images/bg-intro-desktop.svg');
       //background-position: left center;
     }
 
@@ -40,7 +40,7 @@
         content: '';
         position: absolute;
         height: 100%;
-        background-image: url('/images/bg-intro-desktop.svg');
+        background-image: url('images/bg-intro-desktop.svg');
         background-repeat: no-repeat;
         background-position: center bottom;
         width: 150%;
@@ -54,7 +54,7 @@
       position: absolute;
       height: 100%;
       width: 100%;
-      background-image: url('/images/image-mockups.png');
+      background-image: url('images/image-mockups.png');
       background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
